# VideoChatApp

./: docker-compose.yml
backend/: .gitignore  pyproject.toml
backend/src/: .env.template  exceptions.py  lifespan.py  main.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 2025_10_29_0246-85c74127eda1_create_user_table.py  2025_11_02_0349-77fa2865ee78_create_users_table.py  2025_11_02_2206-105e2e9800bf_create_users_table.py  2025_11_02_2218-561d115fa6c8_create_users_table.py
backend/src/api/: __init__.py
backend/src/api/api_v1/: __init__.py  users.py
backend/src/api/api_v1/crud/: users.py
backend/src/api/api_v1/users/: crud.py  views.py
backend/src/api/v1/: __init__.py  auth.py  users.py
backend/src/core/: config.py  cookies.py  jwt.py  response_factory.py  security.py
backend/src/core/dependencies/: __init__.py  users.py
backend/src/core/models/: __init__.py  base.py  user.py
backend/src/core/schemas/: __init__.py  user.py
backend/src/core/security/: __init__.py  cookie_utils.py  jwt_utils.py  pwd_utils.py
backend/src/core/shemas/: __init__.py  response.py  token.py  user.py
backend/src/core/utils/: __init__.py  response_factory.py
backend/src/db/: __init__.py  base.py  user.py
backend/src/dependencies/: __init__.py  user.py
backend/src/schemas/: __init__.py  response.py  token.py  user.py
backend/src/services/: user.py
backend/src/utils/: __init__.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx
frontend/app/login/: page.tsx
(+3 files in other folders)
